--- a/Theater/Theater.csproj
+++ b/Theater/Theater.csproj
@@ -92,6 +92,9 @@
     <Compile Include="ApplicationData\inventory.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="ApplicationData\inventory_item_name.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="ApplicationData\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -254,6 +257,19 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Images\alekseeva.jpg" />
+    <Resource Include="Images\andreev.jpg" />
+    <Resource Include="Images\egorova.jpg" />
+    <Resource Include="Images\fedorova.jpg" />
+    <Resource Include="Images\ivanov.jpg" />
+    <Resource Include="Images\michailova.jpg" />
+    <Resource Include="Images\novikova.jpg" />
+    <Resource Include="Images\petrov.jpg" />
+    <Resource Include="Images\sidorov.jpg" />
+    <Resource Include="Images\yakovleva.jpg" />
+    <Resource Include="Resources\curtain.jpg" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="ApplicationData\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
@@ -264,17 +280,6 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
-    <Resource Include="Resources\alekseeva.jpg" />
-    <Resource Include="Resources\andreev.jpg" />
-    <Resource Include="Resources\egorova.jpg" />
-    <Resource Include="Resources\fedorova.jpg" />
-    <Resource Include="Resources\ivanov.jpg" />
-    <Resource Include="Resources\michailova.jpg" />
-    <Resource Include="Resources\novikova.jpg" />
-    <Resource Include="Resources\petrov.jpg" />
-    <Resource Include="Resources\sidorov.jpg" />
-    <Resource Include="Resources\yakovleva.jpg" />
-    <Resource Include="Resources\curtain.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
