--- a/Theater/Theater.csproj
+++ b/Theater/Theater.csproj
@@ -95,6 +95,7 @@
     <Compile Include="ApplicationData\inventory_item_name.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="ApplicationData\MethodsForDB.cs" />
     <Compile Include="ApplicationData\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
