--- a/Theater/Theater.csproj
+++ b/Theater/Theater.csproj
@@ -151,6 +151,22 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PageAdmin\PageAddActor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PageAdmin\PageAddAdmin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PageAdmin\PageAddPerformance.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PageAdmin\PageAddShowtime.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="PageAdmin\PageMenuAdmin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -179,16 +195,24 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="PageMain\PageSponsors.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="PageMain\ViewerNavigation.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PageAdmin\PageAddActor.xaml.cs">
+      <DependentUpon>PageAddActor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PageAdmin\PageAddAdmin.xaml.cs">
+      <DependentUpon>PageAddAdmin.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PageAdmin\PageAddPerformance.xaml.cs">
+      <DependentUpon>PageAddPerformance.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PageAdmin\PageAddShowtime.xaml.cs">
+      <DependentUpon>PageAddShowtime.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PageAdmin\PageMenuAdmin.xaml.cs">
       <DependentUpon>PageMenuAdmin.xaml</DependentUpon>
     </Compile>
@@ -209,9 +233,6 @@
     </Compile>
     <Compile Include="PageMain\PageShowtimes.xaml.cs">
       <DependentUpon>PageShowtimes.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="PageMain\PageSponsors.xaml.cs">
-      <DependentUpon>PageSponsors.xaml</DependentUpon>
     </Compile>
     <Compile Include="PageMain\ViewerNavigation.xaml.cs">
       <DependentUpon>ViewerNavigation.xaml</DependentUpon>
