--- a/Theater/Theater.csproj
+++ b/Theater/Theater.csproj
@@ -174,6 +174,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="PageEdit\PageEditPerformance.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="PageMain\PageActors.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -219,6 +223,9 @@
     </Compile>
     <Compile Include="PageAdmin\PageMenuAdmin.xaml.cs">
       <DependentUpon>PageMenuAdmin.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PageEdit\PageEditPerformance.xaml.cs">
+      <DependentUpon>PageEditPerformance.xaml</DependentUpon>
     </Compile>
     <Compile Include="PageMain\PageActors.xaml.cs">
       <DependentUpon>PageActors.xaml</DependentUpon>
